--- a/blogpost.html
+++ b/blogpost.html
@@ -8,5 +8,6 @@
 			<div id="post">
 				<h1>Este es el titulo atractivo e interesante</h1>
 				<p>Y este es el parrafo de inicio donde vamos a explicar</p>
+				<p>Segundo parrafo adicional</p>
 	</body>
 </html>
